--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_library (utils STATIC "faddeeva.cpp" gnuplot_iostream.hpp)
+add_library (utils STATIC "faddeeva.cpp" gnuplot_iostream.hpp performance.hpp)
