--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(gsl_basics)
+add_subdirectory(net_basics)
 
 find_package(Allegro REQUIRED) #OpenGL
 find_package(Threads REQUIRED) #Multithreading
