--- a/src/examples/dsp/CMakeLists.txt
+++ b/src/examples/dsp/CMakeLists.txt
@@ -2,11 +2,11 @@ find_package(GSL REQUIRED) #Basic math utils
 find_package(Boost REQUIRED COMPONENTS system iostreams)
 find_package(Threads REQUIRED) #Multithreading
 
-add_executable (inverse_rc_filter "inverse_rc_filter.cpp")
-target_link_libraries(inverse_rc_filter ${GSL_LIBRARIES})
-set_property(TARGET inverse_rc_filter PROPERTY CXX_STANDARD 11)
+add_executable (ex_dsp_invert_rc "invert_rc.cpp")
+target_link_libraries(ex_dsp_invert_rc ${GSL_LIBRARIES})
+set_property(TARGET ex_dsp_invert_rc PROPERTY CXX_STANDARD 11)
 
-add_executable (dummy_pipeline "dummy_pipeline.cpp")
-target_link_libraries(dummy_pipeline ${CMAKE_THREAD_LIBS_INIT})
-set_property(TARGET dummy_pipeline PROPERTY CXX_STANDARD 11)
+add_executable (ex_dsp_pipeline "pipeline.cpp")
+target_link_libraries(ex_dsp_pipeline ${CMAKE_THREAD_LIBS_INIT})
+set_property(TARGET ex_dsp_pipeline PROPERTY CXX_STANDARD 11)
 
