--- a/src/examples/fdtd/CMakeLists.txt
+++ b/src/examples/fdtd/CMakeLists.txt
@@ -1,49 +1,45 @@
 find_package(Allegro REQUIRED) #OpenGL
 find_package(Threads REQUIRED) #Multithreading
 
-add_executable (example_fdtd_minimal "minimal.cpp")
-include_directories(example_fdtd_minimal ${ALLEGRO_INCLUDE_DIR})
-target_link_libraries(example_fdtd_minimal ${ALLEGRO_LIBRARIES})
-target_link_libraries(example_fdtd_minimal ${CMAKE_THREAD_LIBS_INIT})
-set_property(TARGET example_fdtd_minimal PROPERTY CXX_STANDARD 11)
+add_executable (ex_fdtd_minimal "minimal.cpp")
+include_directories(ex_fdtd_minimal ${ALLEGRO_INCLUDE_DIR})
+target_link_libraries(ex_fdtd_minimal ${ALLEGRO_LIBRARIES})
+target_link_libraries(ex_fdtd_minimal ${CMAKE_THREAD_LIBS_INIT})
+set_property(TARGET ex_fdtd_minimal PROPERTY CXX_STANDARD 11)
 
-add_executable (example_fdtd_lense "lense.cpp")
-include_directories(example_fdtd_lense ${ALLEGRO_INCLUDE_DIR})
-target_link_libraries(example_fdtd_lense ${ALLEGRO_LIBRARIES})
-target_link_libraries(example_fdtd_lense ${CMAKE_THREAD_LIBS_INIT})
-set_property(TARGET example_fdtd_lense PROPERTY CXX_STANDARD 11)
+add_executable (ex_fdtd_lense "lense.cpp")
+include_directories(ex_fdtd_lense ${ALLEGRO_INCLUDE_DIR})
+target_link_libraries(ex_fdtd_lense ${ALLEGRO_LIBRARIES})
+target_link_libraries(ex_fdtd_lense ${CMAKE_THREAD_LIBS_INIT})
+set_property(TARGET ex_fdtd_lense PROPERTY CXX_STANDARD 11)
 
-add_executable (example_fdtd_2nd_mur "mur_2nd.cpp")
-include_directories(example_fdtd_2nd_mur ${ALLEGRO_INCLUDE_DIR})
-target_link_libraries(example_fdtd_2nd_mur ${ALLEGRO_LIBRARIES})
-target_link_libraries(example_fdtd_2nd_mur ${CMAKE_THREAD_LIBS_INIT})
-set_property(TARGET example_fdtd_2nd_mur PROPERTY CXX_STANDARD 11)
+add_executable (ex_fdtd_mur_2nd "mur_2nd.cpp")
+include_directories(ex_fdtd_mur_2nd ${ALLEGRO_INCLUDE_DIR})
+target_link_libraries(ex_fdtd_mur_2nd ${ALLEGRO_LIBRARIES})
+target_link_libraries(ex_fdtd_mur_2nd ${CMAKE_THREAD_LIBS_INIT})
+set_property(TARGET ex_fdtd_mur_2nd PROPERTY CXX_STANDARD 11)
 
-add_executable (example_fdtd_2dite "2dite.cpp" ../num/differentiation.cpp)
-include_directories(example_fdtd_2dite ${ALLEGRO_INCLUDE_DIR})
-target_link_libraries(example_fdtd_2dite ${ALLEGRO_LIBRARIES})
-target_link_libraries(example_fdtd_2dite ${CMAKE_THREAD_LIBS_INIT})
-set_property(TARGET example_fdtd_2dite PROPERTY CXX_STANDARD 11)
+add_executable (ex_fdtd_2dite "2dite.cpp")
+include_directories(ex_fdtd_2dite ${ALLEGRO_INCLUDE_DIR})
+target_link_libraries(ex_fdtd_2dite ${ALLEGRO_LIBRARIES})
+target_link_libraries(ex_fdtd_2dite ${CMAKE_THREAD_LIBS_INIT})
+set_property(TARGET ex_fdtd_2dite PROPERTY CXX_STANDARD 11)
 
-add_executable (example_fdtd_resonator "resonator.cpp")
-include_directories(example_fdtd_resonator ${ALLEGRO_INCLUDE_DIR})
-target_link_libraries(example_fdtd_resonator ${ALLEGRO_LIBRARIES})
-target_link_libraries(example_fdtd_resonator ${CMAKE_THREAD_LIBS_INIT})
-set_property(TARGET example_fdtd_resonator PROPERTY CXX_STANDARD 11)
+add_executable (ex_fdtd_resonator "resonator.cpp")
+include_directories(ex_fdtd_resonator ${ALLEGRO_INCLUDE_DIR})
+target_link_libraries(ex_fdtd_resonator ${ALLEGRO_LIBRARIES})
+target_link_libraries(ex_fdtd_resonator ${CMAKE_THREAD_LIBS_INIT})
+set_property(TARGET ex_fdtd_resonator PROPERTY CXX_STANDARD 11)
 
-add_executable (example_fdtd_difint "diafragm.cpp")
-include_directories(example_fdtd_difint ${ALLEGRO_INCLUDE_DIR})
-target_link_libraries(example_fdtd_difint ${ALLEGRO_LIBRARIES})
-target_link_libraries(example_fdtd_difint ${CMAKE_THREAD_LIBS_INIT})
-set_property(TARGET example_fdtd_difint PROPERTY CXX_STANDARD 11)
+add_executable (ex_fdtd_diafragm "diafragm.cpp")
+include_directories(ex_fdtd_diafragm ${ALLEGRO_INCLUDE_DIR})
+target_link_libraries(ex_fdtd_diafragm ${ALLEGRO_LIBRARIES})
+target_link_libraries(ex_fdtd_diafragm ${CMAKE_THREAD_LIBS_INIT})
+set_property(TARGET ex_fdtd_diafragm PROPERTY CXX_STANDARD 11)
 
-add_executable (example_fdtd_foton "foton.cpp")
-include_directories(example_fdtd_foton ${ALLEGRO_INCLUDE_DIR})
-target_link_libraries(example_fdtd_foton ${ALLEGRO_LIBRARIES})
-target_link_libraries(example_fdtd_foton ${CMAKE_THREAD_LIBS_INIT})
-target_link_libraries(example_fdtd_foton utils)
-set_property(TARGET example_fdtd_foton PROPERTY CXX_STANDARD 11)
-
-add_executable (example_visual_gnuplot "example_visual_gnuplot.cpp")
-target_link_libraries(example_visual_gnuplot ${CMAKE_THREAD_LIBS_INIT})
-set_property(TARGET example_visual_gnuplot PROPERTY CXX_STANDARD 11)
+add_executable (ex_fdtd_foton "foton.cpp")
+include_directories(ex_fdtd_foton ${ALLEGRO_INCLUDE_DIR})
+target_link_libraries(ex_fdtd_foton ${ALLEGRO_LIBRARIES})
+target_link_libraries(ex_fdtd_foton ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(ex_fdtd_foton utils)
+set_property(TARGET ex_fdtd_foton PROPERTY CXX_STANDARD 11)
