--- a/src/examples/fdtd/CMakeLists.txt
+++ b/src/examples/fdtd/CMakeLists.txt
@@ -25,11 +25,11 @@ target_link_libraries(ex_fdtd_2dite ${ALLEGRO_LIBRARIES})
 target_link_libraries(ex_fdtd_2dite ${CMAKE_THREAD_LIBS_INIT})
 set_property(TARGET ex_fdtd_2dite PROPERTY CXX_STANDARD 11)
 
-add_executable (ex_fdtd_resonator "resonator.cpp")
-include_directories(ex_fdtd_resonator ${ALLEGRO_INCLUDE_DIR})
-target_link_libraries(ex_fdtd_resonator ${ALLEGRO_LIBRARIES})
-target_link_libraries(ex_fdtd_resonator ${CMAKE_THREAD_LIBS_INIT})
-set_property(TARGET ex_fdtd_resonator PROPERTY CXX_STANDARD 11)
+add_executable (ex_fdtd_laser "laser.cpp")
+include_directories(ex_fdtd_laser ${ALLEGRO_INCLUDE_DIR})
+target_link_libraries(ex_fdtd_laser ${ALLEGRO_LIBRARIES})
+target_link_libraries(ex_fdtd_laser ${CMAKE_THREAD_LIBS_INIT})
+set_property(TARGET ex_fdtd_laser PROPERTY CXX_STANDARD 11)
 
 add_executable (ex_fdtd_diafragm "diafragm.cpp")
 include_directories(ex_fdtd_diafragm ${ALLEGRO_INCLUDE_DIR})
