intervals, shooting... etc

--- a/src/examples/num/CMakeLists.txt
+++ b/src/examples/num/CMakeLists.txt
@@ -26,7 +26,24 @@ set_property(TARGET ex_num_homogen PROPERTY CXX_STANDARD 11)
 add_executable (ex_num_numerov numerov.cpp)
 set_property(TARGET ex_num_numerov PROPERTY CXX_STANDARD 11)
 
+add_executable (ex_num_static_taylor static_taylor.cpp)
+set_property(TARGET ex_num_static_taylor PROPERTY CXX_STANDARD 11)
+
 add_executable (ex_num_inout inout.cpp)
 target_include_directories(ex_num_inout PUBLIC ${GNUPLOT_IOS_INCLUDE_DIR})
 target_link_libraries(ex_num_inout ${Boost_LIBRARIES} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
 set_property(TARGET ex_num_inout PROPERTY CXX_STANDARD 11)
+
+add_executable (ex_num_schrodinger_shoot schrodinger_shoot.cpp)
+target_include_directories(ex_num_schrodinger_shoot PUBLIC ${GNUPLOT_IOS_INCLUDE_DIR})
+target_include_directories(ex_num_schrodinger_shoot PUBLIC ${GSL_INCLUDE_DIR})
+target_link_libraries(ex_num_schrodinger_shoot ${Boost_LIBRARIES} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
+target_link_libraries(ex_num_schrodinger_shoot ${GSL_LIBRARIES})
+set_property(TARGET ex_num_schrodinger_shoot PROPERTY CXX_STANDARD 11)
+
+add_executable (ex_num_root_localize root_localize.cpp)
+target_include_directories(ex_num_root_localize PUBLIC ${GNUPLOT_IOS_INCLUDE_DIR})
+target_link_libraries(ex_num_root_localize ${Boost_LIBRARIES} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
+target_include_directories(ex_num_root_localize PUBLIC ${GSL_INCLUDE_DIR})
+target_link_libraries(ex_num_root_localize ${GSL_LIBRARIES})
+set_property(TARGET ex_num_root_localize PROPERTY CXX_STANDARD 11)
